Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-25564

Server crashed on running some EXPLAIN statements

    XMLWordPrintable

Details

    Description

      Executing of the statement

      EXPLAIN (SELECT 1,3) UNION (SELECT 2,1) ORDER BY (SELECT 2);
      

      results in server crash.

      Stack trace to the crash point is below

        * frame #0: 0x000000010b5abf12 mysqld`Explain_node::print_explain_for_children(this=0x00007fc48f130a10, query=0x00007fc48f130680, output=0x00007fc48f12ee88, explain_flags='\x01', is_analyze=false) at sql_explain.cc:615:15
          frame #1: 0x000000010b5abc4f mysqld`Explain_union::print_explain(this=0x00007fc48f130a10, query=0x00007fc48f130680, output=0x00007fc48f12ee88, explain_flags='\x01', is_analyze=false) at sql_explain.cc:540:10
          frame #2: 0x000000010b5aaeb6 mysqld`Explain_query::print_explain(this=0x00007fc48f130680, output=0x00007fc48f12ee88, explain_flags='\x01', is_analyze=false) at sql_explain.cc:203:18
          frame #3: 0x000000010b392ffc mysqld`execute_sqlcom_select(thd=0x00007fc47e846a70, all_tables=0x0000000000000000) at sql_parse.cc:6229:25
          frame #4: 0x000000010b385f1d mysqld`mysql_execute_command(thd=0x00007fc47e846a70) at sql_parse.cc:3585:12
          frame #5: 0x000000010b3810f3 mysqld`mysql_parse(thd=0x00007fc47e846a70, rawbuf="EXPLAIN (SELECT 1,3) UNION (SELECT 2,1) ORDER BY (SELECT 2)", length=59, parser_state=0x000070000ae38fb0, is_com_multi=false, is_next_command=false) at sql_parse.cc:7796:18
          frame #6: 0x000000010b37b42b mysqld`dispatch_command(command=COM_QUERY, thd=0x00007fc47e846a70, packet="", packet_length=59, is_com_multi=false, is_next_command=false) at sql_parse.cc:1827:7
      

      Attachments

        Issue Links

          Activity

            People

              psergei Sergei Petrunia
              shulga Dmitry Shulga
              Votes:
              1 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1d
                  1d

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.