MDEV-25564 Server crashed on running some EXPLAIN statements

Exclude from explain substituted single value subquery without tables.